plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.sonarqube' version '7.2.2.6593'
}

sonar {
    properties {
        property "sonar.projectKey", "Aminmiri82_devops-project-MARLY"
        property "sonar.organization", "aminmiri82"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

group = 'org.marly'
version = '0.0.1-SNAPSHOT'
description = 'Mavigo'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

springBoot {
    mainClass = 'org.marly.mavigo.MavigoApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}